<resources>
    <string name="app_name">Chefbook</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="shopping_list">Shopping List</string>
    <string name="expand">More/Less</string>
    <string name="serves">Serves \u0020</string>
    <string name="prep_time">Prep Time: \u0020</string>
    <string name="minutes">\u0020 minutes</string>
    <string name="find_recipes">Find Recipes</string>
    <string name="cancel">Cancel</string>
    <string name="no_favorites">You have no favorite recipes. Try searching for something!</string>
    <string name="no_results">Your search returned no results. Try something else!</string>
    <string name="results">Results for \u0020</string>
</resources>
