<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
                name="viewModel"
                type="com.iambenbradley.chefbook.viewmodel.RecipeGridViewModel"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                app:elevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_app_icon_32"
                    style="@style/Theme.Chefbook.Toolbar"
                    app:title="@string/app_name"/>

            <LinearLayout
                    android:id="@+id/grid_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorSecondaryDark"
                        android:layout_marginStart="36dp"
                        android:layout_marginEnd="36dp"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="72dp"
                        android:layout_marginBottom="72dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        app:boxBackgroundColor="@color/colorPrimaryDark"
                        app:boxStrokeColor="@color/colorSecondaryDark"
                        android:hint="@string/search">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorSecondaryDark"
                            android:textColor="@color/colorSecondaryDark"
                            android:drawableStart="@drawable/ic_search"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/search_cancel_button"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12dp"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:text="@string/cancel"/>

                        <com.google.android.material.button.MaterialButton
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/find_recipes"/>

                    </LinearLayout>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:id="@+id/grid_front_sheet"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintVertical_weight="1"
                android:elevation="2dp"
                android:background="@drawable/front_sheet_shape"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_marginTop="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"/>

     <!--       <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
-->
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
                android:id="@+id/action_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="16dp"
                android:padding="12dp"
                android:background="@drawable/action_sheet_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                    android:contentDescription="@string/favorites"
                    android:clickable="true"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_heart_empty"/>

            <ImageView
                    android:id="@+id/detail_search_button"
                    android:contentDescription="@string/search"
                    android:clickable="true"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_search"/>

            <ImageView
                    android:contentDescription="@string/shopping_list"
                    android:clickable="true"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_cart"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>